--- a/style.css
+++ b/style.css
@@ -1,50 +1,118 @@
 .header-title{
-
-    text-align: center;
-}
-#btn1{
-  position: relative;
-  background-color: #4CAF50;
-  border: none;
-  font-size: 28px;
-  color: #FFFFFF;
-  padding: 20px;
-  width: 150px;
   text-align: center;
-  transition-duration: 0.4s;
-  text-decoration: none;
-  overflow: hidden;
-  cursor: pointer;
+  background-color: #fef9ef;
+  width: 650px;
+  margin: auto;
+  width: 50%;
+  border: 5px solid #17c3b2;
+  border-radius: 10px;
+  padding: 20px;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.header-title .mechanics{
+  font-size: 14px;
+  background-color: #ffcb7742;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  border-radius: 10px;
+}
+
+.header-title #round, #score{
+  font-size: 18px;
+}
+
+.cards #card1, #card2, #card3{
+  font-size: 18px;
+  color: #227c9d;
+  font-weight: 900;
+}
+
+#btn1{
+position: relative;
+background-color: #17c3b2;
+border: none;
+border-radius: 20px;
+font-size: 18px;
+color: #FFFFFF;
+padding: 10px;
+width: 100px;
+margin-right: 7rem;
+text-align: center;
+transition-duration: 0.4s;
+text-decoration: none;
+overflow: hidden;
+cursor: pointer;
 }
 
 #btn1:after {
-    content: "";
-    background: #f1f1f1;
-    display: block;
-    position: absolute;
-    padding-top: 300%;
-    padding-left: 350%;
-    margin-left: -20px !important;
-    margin-top: -120%;
-    opacity: 0;
-    transition: all 0.8s
-  }
-  
+  content: "";
+  background: #f1f1f1;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  margin-left: -20px !important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all 0.8s
+}
+
 #btn1:active:after {
-    padding: 0;
-    margin: 0;
-    opacity: 1;
-    transition: 0s
-  }
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s
+}
 
 #btn2{
+position: relative;
+bottom: 59px;
+left: 55px;
+background-color: #fe6d73;
+border: none;
+border-radius: 20px;
+font-size: 18px;
+color: #FFFFFF;
+padding: 10px;
+width: 100px;
+text-align: center;
+transition-duration: 0.4s;
+text-decoration: none;
+overflow: hidden;
+cursor: pointer;
+}
+
+#btn2:after {
+  content: "";
+  background: #f1f1f1;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  margin-left: -20px !important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all 0.8s
+}
+
+#btn2:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s;
+}
+
+#btn3{
   position: relative;
-  background-color: red;
+  background-color: #ffcb77;
+  bottom: 60px;
   border: none;
-  font-size: 28px;
+  border-radius: 20px;
+  font-size: 18px;
   color: #FFFFFF;
-  padding: 20px;
-  width: 150px;
+  padding: 10px;
+  width: 210px;
   text-align: center;
   transition-duration: 0.4s;
   text-decoration: none;
@@ -52,7 +120,7 @@
   cursor: pointer;
 }
 
-#btn2:after {
+#btn3:after {
     content: "";
     background: #f1f1f1;
     display: block;
@@ -65,44 +133,9 @@
     transition: all 0.8s
   }
   
-#btn2:active:after {
+#btn3:active:after {
     padding: 0;
     margin: 0;
     opacity: 1;
     transition: 0s;
   }
-
-  #btn3{
-    position: relative;
-    background-color: yellow;
-    border: none;
-    font-size: 28px;
-    color: #FFFFFF;
-    padding: 20px;
-    width: 150px;
-    text-align: center;
-    transition-duration: 0.4s;
-    text-decoration: none;
-    overflow: hidden;
-    cursor: pointer;
-  }
-  
-  #btn3:after {
-      content: "";
-      background: #f1f1f1;
-      display: block;
-      position: absolute;
-      padding-top: 300%;
-      padding-left: 350%;
-      margin-left: -20px !important;
-      margin-top: -120%;
-      opacity: 0;
-      transition: all 0.8s
-    }
-    
-  #btn3:active:after {
-      padding: 0;
-      margin: 0;
-      opacity: 1;
-      transition: 0s;
-    }
